--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: demo-mday
+- name: bf-spring-boot-demo
   memory: 1024M
   buildpack: java_buildpack
   routes:
-  - route: demo-mday.cfapps.io
+  - route: bf-spring-boot-demo.cfapps.io
 services: [ demoDB, demoMQ ]
