--- a/pipeline/credentials-sample.yml
+++ b/pipeline/credentials-sample.yml
@@ -1,13 +1,13 @@
-pcf-appname: xxx
-pcf-api: api.xxxx
-pcf-username: xxxx
-pcf-password: xxxx
-pcf-org: xxxx
-pcf-space: xxxx
-pcf-app-domain: demo.xxx.xxx
+pcf-appname: bf-spring-boot-pcf-demo
+pcf-api: api.run.pivotal.io
+pcf-username: bfriedman@pivotal.io
+pcf-password: 0i4s*0Hkze#p
+pcf-org: bfriedman-org
+pcf-space: demo
+pcf-app-domain: cfapps.io
 
-aws-bucket-name: xxxx
+aws-bucket-name: bf-spring-boot-demo
 aws-file-name: demo-0.0.1-SNAPSHOT.jar
-aws-access-key: xxxx 
-aws-secret-key: xxxx
-aws-region-name: eu-west-1
+aws-access-key: AKIAI6IYSHXKCKMPIJBA 
+aws-secret-key: 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
+aws-region-name: us-east-2 
